--- a/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html
+++ b/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-026-guidelines-registration-umbrella-organizations-title-holding-organizations.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-026-lignes-directrices-enregistrement-organismes-cadres-organismes-detiennent-titre-propriete.html"/>
 	
@@ -291,7 +291,7 @@ Guidelines for the registration of umbrella organizations and title holding orga
 <section class="alert alert-info">
 	<h2>Important notice</h2>
 	<p>On June 23, 2022, Budget Implementation Act, 2022, No. 1, received Royal Assent. This change in legislation includes new rules that allow charities to make grants to non-qualified donees. As a result, some of the information on this page could change.</p>
-<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to non-qualified donees</a>. This document explains how the <abbr title="Canada Revenue Agency">CRA</abbr> will administer the recent changes to the Income Tax Act.</p>
+<p>On December 19, 2023, following a public feedback period, the Canada Revenue Agency (CRA) posted the guidance document <a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">CG-032, Registered charities making grants to non-qualified donees</a>. This document explains how the <abbr title="Canada Revenue Agency">CRA</abbr> will administer the recent changes to the Income Tax Act.</p>
 <p>The <abbr title="Canada Revenue Agency">CRA</abbr> is in the process of reviewing and updating all related guidance products and web pages to ensure they are consistent with the new rules.</p>
 
 </section>
@@ -448,7 +448,7 @@ Guidelines for the registration of umbrella organizations and title holding orga
 <p>To be eligible for registration within this section, the formal purpose of the umbrella organization should be worded in such a manner that it is clear the object of the organization is to improve the efficiency and/or effectiveness of other registered charities.</p>
 <p>However, the mere statement &quot;to improve the efficiency and effectiveness of other registered charities&quot; is not sufficient because it is overly broad. For example, under this wording an organization could purport to improve the efficiency of registered charities by only referring employees trained by a particular training company to registered charities. This, of course, would not be acceptable because it would confer an inappropriate private benefit on the training company.</p>
 <p>In addition, an umbrella organization must be established and operated exclusively for charitable purposes, and all the charity’s resources must be devoted to charitable activities carried on by the charity itself. Charitable activities include public policy dialogue and development activities (PPDDA) that further a charitable purpose. <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s generally involve seeking to influence the laws, policies, or decision of a government, whether in Canada or a foreign country.</p>
-<p>As long as a charity’s <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s are carried on in furtherance of its stated charitable purposes, the Income Tax Act places no limits on the amount of <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s a charity can engage in. In this context, a charity may devote up to 100% of its total resources to <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s that further its stated charitable purpose. For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/public-policy-dialogue-development-activities.html">Guidance CG-027, Public policy dialogue and development activities by charities</a>.</p>
+<p>As long as a charity’s <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s are carried on in furtherance of its stated charitable purposes, the Income Tax Act places no limits on the amount of <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s a charity can engage in. In this context, a charity may devote up to 100% of its total resources to <abbr title="Public policy dialogue and development activities">PPDDA</abbr>s that further its stated charitable purpose. For more information, see <a href="https://cra-design.github.io/charities/policies-guidance/public-policy-dialogue-development-activities.html">Guidance CG-027, Public policy dialogue and development activities by charities</a>.</p>
 <p>Umbrella organizations must indicate precisely the means by which they intend to improve the effectiveness and/or efficiency of other registered charities. For example, acceptable wording might be:</p>
 <ul>
 <li>to improve the efficiency of other registered charities by providing a facility, <strong>at below-market rates</strong>, to house the operations of other registered charities</li>
@@ -567,7 +567,7 @@ Guidelines for the registration of umbrella organizations and title holding orga
 </ul>
 </li>
 </ul>
-<p>However, it is not sufficient for a registered charity to simply transfer charitable goods to a non-qualified donee in the hope or assumption that they will be used in charitable programs. Even where the nature of the property limits how it can be used, the charity should be able to show that the property was and/or continues to be used in charitable programs and was not subsequently sold, stored, or disposed of by the non-qualified donee. Particularly when the value of the property is substantial, the charity should have an agreement about the ongoing use of the property and should conduct follow-up monitoring activities to ensure the property was used as intended.&nbsp;For more information, see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">Guidance CG-032, Registered charities making grants to non-qualified donees</a>.&nbsp;</p>
+<p>However, it is not sufficient for a registered charity to simply transfer charitable goods to a non-qualified donee in the hope or assumption that they will be used in charitable programs. Even where the nature of the property limits how it can be used, the charity should be able to show that the property was and/or continues to be used in charitable programs and was not subsequently sold, stored, or disposed of by the non-qualified donee. Particularly when the value of the property is substantial, the charity should have an agreement about the ongoing use of the property and should conduct follow-up monitoring activities to ensure the property was used as intended.&nbsp;For more information, see <a href="https://cra-design.github.io/charities/policies-guidance/charities-making-grants-non-qualified-donees.html">Guidance CG-032, Registered charities making grants to non-qualified donees</a>.&nbsp;</p>
 <p>The above examples illustrate that, to qualify, charities must be extremely cautious when conferring benefits on organizations that are not registered charities. If the <abbr title="Canada Revenue Agency">CRA</abbr> determines that a benefit being conferred is more than incidental (that is, the conferring of the benefit goes beyond what is necessary or reasonable to the achievement of the charitable purpose):</p>
 <ul>
 <li>if the organization is an applicant for registration, it will not qualify</li>
@@ -696,7 +696,7 @@ Guidelines for the registration of umbrella organizations and title holding orga
                 <dt>Footnote 1</dt>
                 <dd id="fn1">
                     <p>
-					   This, of course, does not prohibit a charity from using intermediaries or contracting out services as these are still considered to be the activities of the charity for the purposes of this provision. Registered charities should consult <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a> for the Canada Revenue Agency's requirements with regard to these types of arrangements.
+					   This, of course, does not prohibit a charity from using intermediaries or contracting out services as these are still considered to be the activities of the charity for the purposes of this provision. Registered charities should consult <a href="https://cra-design.github.io/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a> for the Canada Revenue Agency's requirements with regard to these types of arrangements.
 					</p>
 					<p class="fn-rtn">
                         <a href="#fn1-0-rf"><span class="wb-inv">Return to footnote</span>1<span class="wb-inv"> referrer</span></a>
@@ -756,7 +756,7 @@ Guidelines for the registration of umbrella organizations and title holding orga
                 <dt>Footnote 7</dt>
                 <dd id="fn7">
                     <p>
-					   See <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/public-policy-dialogue-development-activities.html">Guidance CG-027, Public policy dialogue and development activities by charities</a> on this topic.
+					   See <a href="https://cra-design.github.io/charities/policies-guidance/public-policy-dialogue-development-activities.html">Guidance CG-027, Public policy dialogue and development activities by charities</a> on this topic.
 					</p>
 					<p class="fn-rtn">
                         <a href="#fn7-0-rf"><span class="wb-inv">Return to footnote</span>7<span class="wb-inv"> referrer</span></a>
@@ -812,8 +812,8 @@ Guidelines for the registration of umbrella organizations and title holding orga
     
         <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html">Policy commentary CPC-022, Group insurance rates for registered charities</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-022-group-insurance-rates-registered-charities.html">Policy commentary CPC-022, Group insurance rates for registered charities</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-21.html">Registered Charities Newsletter, Issue No. 21</a></li>
 </ul>
 
