--- a/policies-guidance/stock-exchange-designated.html
+++ b/policies-guidance/stock-exchange-designated.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/stock-exchange-designated.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/stock-exchange-designated.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/stock-exchange-designated.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/stock-exchange-designated.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/bourse-valeurs-designee.html"/>
 	
@@ -294,7 +294,7 @@ Stock exchange – Designated</h1>
 
     
         <h2 class="font-large">Summary</h2>
- <p>Generally, registered charities may accept gifts of securities that are traded on a stock exchange (shares, rights to acquire shares, and debt obligations). However, the Income Tax Act may not allow tax relief when such gifts are made to private foundations by persons who do not deal at <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/charities-giving-glossary.html#arms">arm's length</a> with the charity (see <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/non-qualified-investment-tax-liability.html">Non-qualified investment</a> and <a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/non-qualifying-security.html">Non-qualifying security</a>) unless the gifted shares, rights to acquire shares, and/or debts are publicly traded on a&nbsp;<strong>designated stock exchange</strong>.&nbsp;The “designated stock exchange” category replaces provisions in the Income Tax Act that had previously referred to a “prescribed stock exchange.”&nbsp;</p>  
+ <p>Generally, registered charities may accept gifts of securities that are traded on a stock exchange (shares, rights to acquire shares, and debt obligations). However, the Income Tax Act may not allow tax relief when such gifts are made to private foundations by persons who do not deal at <a href="https://cra-design.github.io/charities/charities-giving-glossary.html#arms">arm's length</a> with the charity (see <a href="https://cra-design.github.io/charities/policies-guidance/non-qualified-investment-tax-liability.html">Non-qualified investment</a> and <a href="https://cra-design.github.io/charities/policies-guidance/non-qualifying-security.html">Non-qualifying security</a>) unless the gifted shares, rights to acquire shares, and/or debts are publicly traded on a&nbsp;<strong>designated stock exchange</strong>.&nbsp;The “designated stock exchange” category replaces provisions in the Income Tax Act that had previously referred to a “prescribed stock exchange.”&nbsp;</p>  
     
 
 
