--- a/policies-guidance/summary-policy-c10-purposes-beneficial-community.html
+++ b/policies-guidance/summary-policy-c10-purposes-beneficial-community.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-c10-fins-bienfaisance-benefiques-collectivite.html"/>
 	
@@ -315,9 +315,9 @@ Purposes beneficial to community</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li dir="ltr"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li dir="ltr"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/advancement-education-charitable-registration.html">Guidance CG-030, Advancement of education and charitable registration</a></li>
-<li dir="ltr"><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
+<li dir="ltr"><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li dir="ltr"><a href="https://cra-design.github.io/charities/policies-guidance/advancement-education-charitable-registration.html">Guidance CG-030, Advancement of education and charitable registration</a></li>
+<li dir="ltr"><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
 <li dir="ltr"><a href="https://reports.fja.gc.ca/fja-cmf/j/en/item/332758/index.do">Vancouver Regional FreeNet Assn. v. M.N.R. (C.A.) , 1[1996] 3 F.C. 880</a></li>
 <li dir="ltr"><a href="https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/1676/index.do">Vancouver Society of Immigrant and Visible Minority Women v. Minister of National Revenue, [1999] 1 S.C.R. 10</a></li>
 </ul>
