--- a/policies-guidance/summary-policy-c15-capital-fund.html
+++ b/policies-guidance/summary-policy-c15-capital-fund.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c15-capital-fund.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c15-capital-fund.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c15-capital-fund.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c15-capital-fund.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-c15-fonds-capital.html"/>
 	
@@ -320,7 +320,7 @@ CSP-C15</p>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d09-direct-designation.html">Summary policy CSP-D09, Direct designation</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d09-direct-designation.html">Summary policy CSP-D09, Direct designation</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t3010.html">Form T3010, Registered Charity Information Return</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/previous-year-forms-publications/archived-t1259.html">Form T1259, Capital Gains and Disbursement Quota Worksheet</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4033.html">Guide T4033, Completing the Registered Charity Information Return</a></li>
