--- a/policies-guidance/summary-policy-d09-direct-designation.html
+++ b/policies-guidance/summary-policy-d09-direct-designation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d09-direct-designation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d09-direct-designation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d09-direct-designation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d09-direct-designation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d09-transfert-direct.html"/>
 	
@@ -319,7 +319,7 @@ CSP-D09</p>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w02-will.html">Summary policy CSP-W02, Will</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w02-will.html">Summary policy CSP-W02, Will</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/previous-year-forms-publications/archived-t4033b.html">Guide T4033B, Completing the Registered Charity Information Return</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/p113.html">P113, Gifts and Income Tax</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t3010.html">Form T3010, Registered Charity Information Return</a></li>
