--- a/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html
+++ b/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d12-promoting-efficiency-canadian-armed-forces-police-services.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d12-promotion-efficacite-forces-armees-canadiennes-services-polices.html"/>
 	
@@ -317,8 +317,8 @@ Promoting the efficiency of Canadian armed forces and police services</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
 </ul>
 
     
