--- a/policies-guidance/summary-policy-d16-charity-law.html
+++ b/policies-guidance/summary-policy-d16-charity-law.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d16-charity-law.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d16-charity-law.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d16-charity-law.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d16-charity-law.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d16-droit-regissant-organismes-bienfaisance.html"/>
 	
@@ -321,7 +321,7 @@ Charity law</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c08-case-law.html">Summary policy CSP-C08, Case law</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c08-case-law.html">Summary policy CSP-C08, Case law</a></li> 
 </ul>   
     
 
