--- a/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html
+++ b/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-e05-ecologically-sensitive-land.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-e05-terre-ecosensible.html"/>
 	
@@ -315,7 +315,7 @@ Ecologically sensitive land</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p19-disposition-property.html">Summary policy CSP-P19, Disposition of property</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p19-disposition-property.html">Summary policy CSP-P19, Disposition of property</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-22.html">Registered Charities Newsletter, Issue No. 22</a></li>
 <li>Income Tax Act, R.S.C<em>.</em> 1985 (5<sup>th</sup> supp.) c. 1, sub-paras. 38(a.2)(i),69(1)(b)(ii), para. 110.1(1)(d) and ss. 118.1(1)</li>
 <li><a href="https://www.canada.ca/en/environment-climate-change/services/environmental-funding/ecological-gifts-program.html">Ecological Gifts Program</a></li>
