--- a/policies-guidance/summary-policy-f03-festival.html
+++ b/policies-guidance/summary-policy-f03-festival.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-f03-festival.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-f03-festival.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-f03-festival.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-f03-festival.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/arc-organismes-bienfaisance-sommaire-politique-f03-festival.html"/>
 	
@@ -315,9 +315,9 @@ Festival</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-018-arts-activities-charitable-registration.html">Guidance CG-018, Arts activities and charitable registration</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html">Policy statement CPS-005, Festivals and the promotion of tourism</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-010-registration-arts-festivals.html">Policy statement CPS-010, Registration of arts festivals</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-018-arts-activities-charitable-registration.html">Guidance CG-018, Arts activities and charitable registration</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-005-festivals-promotion-tourism.html">Policy statement CPS-005, Festivals and the promotion of tourism</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-010-registration-arts-festivals.html">Policy statement CPS-010, Registration of arts festivals</a></li> 
 </ul>   
     
 
