--- a/policies-guidance/summary-policy-f12-providing-fraudulent-information.html
+++ b/policies-guidance/summary-policy-f12-providing-fraudulent-information.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-f12-providing-fraudulent-information.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-f12-providing-fraudulent-information.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-f12-providing-fraudulent-information.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-f12-providing-fraudulent-information.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-f12-fournier-renseignements-frauduleux.html"/>
 	
@@ -315,7 +315,7 @@ Providing fraudulent information</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5th supp.) c. 1, para. 149.1(4.1)(c)</li> 
 </ul>   
     
