--- a/policies-guidance/summary-policy-i05-assisting-immigrants.html
+++ b/policies-guidance/summary-policy-i05-assisting-immigrants.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-i05-assisting-immigrants.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-i05-assisting-immigrants.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-i05-assisting-immigrants.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-i05-assisting-immigrants.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-i05-aide-immigrants.html"/>
 	
@@ -315,12 +315,12 @@ Assisting immigrants</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">Guidance CG-014, Community economic development</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-023-applicants-assisting-ethnocultural-communities.html">Policy statement&nbsp;CPS-023, Applicants assisting ethnocultural communities</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/advancement-education-charitable-registration.html">Guidance CG-030, Advancement of education and charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w01-women.html">Summary policy CSP-W01, Women</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">Guidance CG-014, Community economic development</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-023-applicants-assisting-ethnocultural-communities.html">Policy statement&nbsp;CPS-023, Applicants assisting ethnocultural communities</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/advancement-education-charitable-registration.html">Guidance CG-030, Advancement of education and charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w01-women.html">Summary policy CSP-W01, Women</a></li>
 <li><a href="https://scc-csc.lexum.com/scc-csc/scc-csc/en/item/1676/index.do">Vancouver Society of Immigrant and Visible Minority Women v. Minister of National Revenue, [1999] 1 S.C.R. 10</a></li>
 </ul>
 
