--- a/policies-guidance/summary-policy-n03-non-profit-organization.html
+++ b/policies-guidance/summary-policy-n03-non-profit-organization.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-n03-non-profit-organization.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-n03-non-profit-organization.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-n03-non-profit-organization.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-n03-non-profit-organization.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-n03-organisation-a-non-lucratif.html"/>
 	
@@ -315,7 +315,7 @@ Non-profit organization</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html">Summary policy CSP-R01, Registered Canadian amateur athletic association</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html">Summary policy CSP-R01, Registered Canadian amateur athletic association</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4117.html">Guide T4117, Income Tax Guide to the Non-Profit Organization (NPO) Information Return</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-19.html">Registered Charities Newsletter, Issue No. 19</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1044.html">Form T1044, Non-Profit Organization (NPO) Information Return</a></li> 
