--- a/policies-guidance/summary-policy-p06-public-benefit.html
+++ b/policies-guidance/summary-policy-p06-public-benefit.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-p06-avantage-public.html"/>
 	
@@ -315,9 +315,9 @@ Public benefit</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html">Policy statement CPS-012, Benefits to Aboriginal peoples of Canada</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-024-guidelines-registering-a-charity-meeting-public-benefit-test.html">Policy statement CPS-024, Guidelines for registering a charity: Meeting the public benefit test</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-012-benefits-aboriginal-peoples-canada.html">Policy statement CPS-012, Benefits to Aboriginal peoples of Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-024-guidelines-registering-a-charity-meeting-public-benefit-test.html">Policy statement CPS-024, Guidelines for registering a charity: Meeting the public benefit test</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-20.html">Registered Charities Newsletter, Issue No. 20</a></li>
 <li><a href="https://reports.fja.gc.ca/fja-cmf/j/en/item/332758/index.do">Action des Femmes Handicapées (Montréal) c. Canada (Ministre du revenu national), 1998-06-23</a></li>
 <li><a href="http://reports.fja.gc.ca/eng/1996/1996fca0070.html">Vancouver Regional FreeNet Assn. v. M.N.R. (C.A.), 1996-07-08</a></li>
