--- a/policies-guidance/summary-policy-p09-private-benefit.html
+++ b/policies-guidance/summary-policy-p09-private-benefit.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p09-private-benefit.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p09-private-benefit.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p09-private-benefit.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p09-private-benefit.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-p09-actes-bienfaisance-prives.html"/>
 	
@@ -315,10 +315,10 @@ Private benefit</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p18-professional-association.html">Summary policy CSP-P18, Professional association</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s02-self-help-groups.html">Summary policy CSP-S02, Self-help groups</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-016-distinction-between-self-help-members-groups.html">Policy statement CPS-016, Distinction between self-help and members' groups</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p06-public-benefit.html">Summary policy CSP-P06, Public benefit</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p18-professional-association.html">Summary policy CSP-P18, Professional association</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s02-self-help-groups.html">Summary policy CSP-S02, Self-help groups</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-016-distinction-between-self-help-members-groups.html">Policy statement CPS-016, Distinction between self-help and members' groups</a></li>
 <li>National Model Railroad Association v. Minister of National Revenue, [1989] 1 C.T.C. 300</li>
 </ul>
 
