--- a/policies-guidance/summary-policy-p15-prescribed-donee.html
+++ b/policies-guidance/summary-policy-p15-prescribed-donee.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p15-prescribed-donee.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p15-prescribed-donee.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p15-prescribed-donee.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p15-prescribed-donee.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-p15-donataire-vise-reglement.html"/>
 	
@@ -315,7 +315,7 @@ Prescribed donee</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">Guidance CG-010, Qualified donees</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/qualified-donees.html">Guidance CG-010, Qualified donees</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 118.1(6)</li> 
  <li>Income Tax Regulations, C.R.C. 1978, c. 945, s. 3504</li> 
 </ul>   
