--- a/policies-guidance/summary-policy-p18-professional-association.html
+++ b/policies-guidance/summary-policy-p18-professional-association.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p18-professional-association.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p18-professional-association.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p18-professional-association.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p18-professional-association.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-p18-association-professionnelle.html"/>
 	
@@ -315,7 +315,7 @@ Professional association</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-p09-private-benefit.html">Summary policy CSP-P09, Private benefit</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-p09-private-benefit.html">Summary policy CSP-P09, Private benefit</a></li> 
 </ul>   
     
 
