--- a/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html
+++ b/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r01-association-canadienne-enregistree-sport-amateur.html"/>
 	
@@ -320,9 +320,9 @@ CSP-R01</p>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-n03-non-profit-organization.html">Summary policy CSP-N03, Non-profit organization</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-007-rcaaas-receipts-issuing-policy.html">Policy statement CPS-007, <abbr title="Registered Canadian amateur athletic association">RCAAA</abbr>s: Receipts-issuing policy</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html">Policy statement CPS-011, Registration of Canadian amateur athletic associations</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-n03-non-profit-organization.html">Summary policy CSP-N03, Non-profit organization</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-007-rcaaas-receipts-issuing-policy.html">Policy statement CPS-007, <abbr title="Registered Canadian amateur athletic association">RCAAA</abbr>s: Receipts-issuing policy</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-011-registration-canadian-amateur-athletic-associations.html">Policy statement CPS-011, Registration of Canadian amateur athletic associations</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1189.html">Form T1189, Application to Register a Canadian Amateur Athletic Association Under the Income Tax Act</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/it496r.html">Interpretation Bulletin IT-496, Non-Profit Organizations</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2052.html">Form T2052, Registered Canadian Amateur Athletic Association Return of Information</a></li> 
