--- a/policies-guidance/summary-policy-r06-religion.html
+++ b/policies-guidance/summary-policy-r06-religion.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r06-religion.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r06-religion.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r06-religion.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r06-religion.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r06-religion.html"/>
 	
@@ -315,7 +315,7 @@ Religion</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
 <li><a href="http://decisions.fca-caf.gc.ca/en/2004/2004fca181/2004fca181.html">Fuaran Foundation v. Canada (Customs and Revenue Agency) (2004 FCA 181), 2004-05-04</a></li>
 </ul>
 
