--- a/policies-guidance/summary-policy-r09-return.html
+++ b/policies-guidance/summary-policy-r09-return.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r09-return.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r09-return.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r09-return.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r09-return.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r09-declaration.html"/>
 	
@@ -315,8 +315,8 @@ Return</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-n03-non-profit-organization.html">Summary policy CSP-N03, Non-profit organization</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html">Summary policy CSP-R01, Registered Canadian amateur athletic association</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-n03-non-profit-organization.html">Summary policy CSP-N03, Non-profit organization</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r01-registered-canadian-amateur-athletic-association.html">Summary policy CSP-R01, Registered Canadian amateur athletic association</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2052.html">Form T2052, Registered Canadian Amateur Athletic Association Return of Information</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2.html">T2 Corporation Income Tax Return, T2</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012.html">T2 Corporation - Income Tax Guide, T4012</a></li> 
