--- a/policies-guidance/summary-policy-r13-resources.html
+++ b/policies-guidance/summary-policy-r13-resources.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r13-resources.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r13-resources.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r13-resources.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r13-resources.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r13-ressources.html"/>
 	
@@ -315,8 +315,8 @@ Resources</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-001-attendance-a-political-fundraising-dinner.html">Policy commentary CPC-001, Attendance at a political fundraising dinner</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-001-attendance-a-political-fundraising-dinner.html">Policy commentary CPC-001, Attendance at a political fundraising dinner</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-002-canadian-registered-charities-carrying-activities-outside-canada.html">Guidance CG-002, Canadian registered charities carrying on activities outside Canada</a></li>
 <li>College rabbinique de Montreal Oir Hachaim D'Tash v. Canada (Minister of the Customs and Revenue Agency) (2004 FCA 101), 2004-03-09</li>
 <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 149.1(1), (6), (6.1) and (6.2)</li>
 </ul>
