--- a/policies-guidance/summary-policy-r17-cemeteries.html
+++ b/policies-guidance/summary-policy-r17-cemeteries.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r17-cemeteries.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r17-cemeteries.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r17-cemeteries.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r17-cemeteries.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r17-cimetieres.html"/>
 	
@@ -315,10 +315,10 @@ Cemeteries</h1>
     
         <h2 class="font-large">References</h2>
 <ul dir="ltr">
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r06-religion.html">Summary policy CSP-R06, Religion</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-h05-heritage-society.html">Summary policy CSP-H05, Heritage society</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-h07-historical-site-items.html">Summary policy CSP-H07, Historical site, items</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r06-religion.html">Summary policy CSP-R06, Religion</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-h05-heritage-society.html">Summary policy CSP-H05, Heritage society</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-h07-historical-site-items.html">Summary policy CSP-H07, Historical site, items</a></li>
 </ul>
 
     
