--- a/policies-guidance/summary-policy-s07-donation-schemes.html
+++ b/policies-guidance/summary-policy-s07-donation-schemes.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s07-donation-schemes.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s07-donation-schemes.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s07-donation-schemes.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s07-donation-schemes.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-s07-stratagemes-relatifs-a-dons.html"/>
 	
@@ -315,7 +315,7 @@ Donation schemes</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/ic01-1.html">Information Circular IC 01-1, Third-Party Civil Penalties</a></li>
 <li><a href="http://decision.tcc-cci.gc.ca/en/2003/2003tcc612/2003tcc612.html">Cortbaoui v. The Queen, 2003-09-04</a></li>
 <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 163.2 and 248(1)</li>
