--- a/policies-guidance/summary-policy-s16-substantially.html
+++ b/policies-guidance/summary-policy-s16-substantially.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s16-substantially.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s16-substantially.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s16-substantially.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s16-substantially.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-s16-quasi-totalite-presque-totalite.html"/>
 	
@@ -315,7 +315,7 @@ Substantially all</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r05-business-activity.html">Summary policy CSP-R05, Business activity</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r05-business-activity.html">Summary policy CSP-R05, Business activity</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1</li> 
 </ul>   
     
