--- a/policies-guidance/summary-policy-w03-winding-period.html
+++ b/policies-guidance/summary-policy-w03-winding-period.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w03-winding-period.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w03-winding-period.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w03-winding-period.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w03-winding-period.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-w03-periode-liquidation.html"/>
 	
@@ -319,9 +319,9 @@ Winding-up period</h1>
     
         <h2 class="font-large">﻿References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c26-collection.html">Summary policy CSP-C26, Collection</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r24-revocation.html">Summary policy CSP-R24, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c26-collection.html">Summary policy CSP-C26, Collection</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r24-revocation.html">Summary policy CSP-R24, Revocation</a></li> 
  <li>Charities Registration (Security Information) Act, S.C. 2001, c. 41, ss. 5(1) and <span>7(1)</span></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 188(1.1), (1.2) and s. <span>225.1</span></li> 
 </ul>   
