--- a/policies-guidance/policy-statement-025-promotion-volunteerism.html
+++ b/policies-guidance/policy-statement-025-promotion-volunteerism.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-025-promotion-volunteerism.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-025-promotion-volunteerism.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-025-promotion-volunteerism.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/policy-statement-025-promotion-volunteerism.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/enonce-politique-025-promotion-benevolat.html"/>
 	
@@ -751,7 +751,7 @@ May 1, 2008</p>
     
         <h2>References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Other purposes beneficial to the community</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Other purposes beneficial to the community</a></li>
 </ul>
 
     
