--- a/policies-guidance/summary-policy-c21-crown-agent-corporation.html
+++ b/policies-guidance/summary-policy-c21-crown-agent-corporation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c21-crown-agent-corporation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c21-crown-agent-corporation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c21-crown-agent-corporation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c21-crown-agent-corporation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-c21-couronne-mandatoire-societe.html"/>
 	
@@ -315,8 +315,8 @@ Crown (agent, corporation)</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c22-crown-federal-provincial.html">Summary policy CSP-C22, Crown (federal, provincial)</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/qualified-donees.html">Guidance CG-010, Qualified donees</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c22-crown-federal-provincial.html">Summary policy CSP-C22, Crown (federal, provincial)</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/qualified-donees.html">Guidance CG-010, Qualified donees</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, paras. 110.1(1)(a) and (b), ss. 118.1(1) and 149.1(1)</li> 
 </ul>   
     
