--- a/policies-guidance/summary-policy-c23-pres-gift-will.html
+++ b/policies-guidance/summary-policy-c23-pres-gift-will.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c23-pres-gift-will.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c23-pres-gift-will.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c23-pres-gift-will.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c23-pres-gift-will.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-c23-pres-donation-testament.html"/>
 	
@@ -315,7 +315,7 @@ Cy-près (Gift by will)</h1>
     
         <h2 class="font-large">Reference</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w02-will.html">Summary policy CSP-W02, Will</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w02-will.html">Summary policy CSP-W02, Will</a></li> 
 </ul>   
     
 
