--- a/policies-guidance/summary-policy-c28-control-corporation.html
+++ b/policies-guidance/summary-policy-c28-control-corporation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c28-control-corporation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c28-control-corporation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c28-control-corporation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c28-control-corporation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-c28-controle-societe.html"/>
 	
@@ -315,8 +315,8 @@ Control of corporation</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/confidentiality-public-information.html" title="Confidentiality – Public information, CG-008.">Guidance CG-008, Confidentiality – Public information</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/confidentiality-public-information.html" title="Confidentiality – Public information, CG-008.">Guidance CG-008, Confidentiality – Public information</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4033.html">Guide T4033, Completing the Registered Charity Information Return</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, paras. 149.1(3)(c), (4)(c), ss. 149.1(12) and 188.1(3)</li> 
 </ul>   
