--- a/policies-guidance/summary-policy-d06-debt.html
+++ b/policies-guidance/summary-policy-d06-debt.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d06-debt.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d06-debt.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d06-debt.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d06-debt.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d06-dette.html"/>
 	
@@ -319,7 +319,7 @@ Debt</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-27.html">Registered Charities Newsletter, Issue No. 27</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, paras. 149.1(3)(d) and (4)(d)</li> 
 </ul>   
