--- a/policies-guidance/summary-policy-d08-deemed-expenditure.html
+++ b/policies-guidance/summary-policy-d08-deemed-expenditure.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d08-deemed-expenditure.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d08-deemed-expenditure.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d08-deemed-expenditure.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d08-deemed-expenditure.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d08-depense-reputee.html"/>
 	
@@ -315,7 +315,7 @@ Deemed expenditure</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">Guidance CG-014, Community economic development activities and charitable registration</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/community-economic-development-activities-charitable-registration-014.html">Guidance CG-014, Community economic development activities and charitable registration</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t3010.html">Form T3010, Registered Charity Information Return</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4033.html">Guide T4033, Completing the Registered Charity Information Return</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 149.1(5) and (8)</li> 
