--- a/policies-guidance/summary-policy-d10-directors-trustees.html
+++ b/policies-guidance/summary-policy-d10-directors-trustees.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d10-directors-trustees.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-d10-directors-trustees.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d10-directors-trustees.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-d10-directors-trustees.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-d10-administrateur-fiduciaire.html"/>
 	
@@ -315,7 +315,7 @@ Directors/Trustees</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-u02-undue-benefits.html">Summary policy CSP-U02, Undue benefits</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-u02-undue-benefits.html">Summary policy CSP-U02, Undue benefits</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4033.html">Guide T4033, Completing the Registered Charity Information Return</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/charitiesnews-21.html">Registered Charities Newsletter, Issue No. 21</a></li>
 <li>Income Tax Act, R.S.C. 1985 (5th supp.) c. 1, ss. 188.1(4), (5) and para. 188.2(1)(b)</li>
