--- a/policies-guidance/summary-policy-m03-mediation.html
+++ b/policies-guidance/summary-policy-m03-mediation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-m03-mediation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-m03-mediation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-m03-mediation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-m03-mediation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-m03-mediation.html"/>
 	
@@ -315,8 +315,8 @@ Mediation</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/guidance-019-draft-purposes-charitable-registration.html">Guidance CG-019, How to draft purposes for charitable registration</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-c10-purposes-beneficial-community.html">Summary policy CSP-C10, Purposes beneficial to community</a></li>
 </ul>
 
     
