--- a/policies-guidance/summary-policy-r05-business-activity.html
+++ b/policies-guidance/summary-policy-r05-business-activity.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r05-business-activity.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r05-business-activity.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r05-business-activity.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r05-business-activity.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r05-activites-commerciales.html"/>
 	
@@ -315,8 +315,8 @@ Business activity</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-019-what-a-related-business.html">Policy statement CPS-019, What is a related business?</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-commentary-002-related-business-public-foundations.html">Policy commentary CPC-002, Related business and public foundations</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-019-what-a-related-business.html">Policy statement CPS-019, What is a related business?</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-commentary-002-related-business-public-foundations.html">Policy commentary CPC-002, Related business and public foundations</a></li> 
  <li>Alberta Institute on Mental Retardation v. M.N.R., [1987] F.C. 286</li> 
  <li><a href="http://decisions.fca-caf.gc.ca/en/2002/2002fca498/2002fca498.html">Earth Fund v. Canada (Minister of National Revenue) (2002 FCA 498), 2002-12-16</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 149.1(1)</li> 
