--- a/policies-guidance/summary-policy-r12-revocation.html
+++ b/policies-guidance/summary-policy-r12-revocation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r12-revocation.html"/>
 	
@@ -315,12 +315,12 @@ Revocation</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r24-revocation.html">Summary policy CSP-R24, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r24-revocation.html">Summary policy CSP-R24, Revocation</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4424.html">Guide RC4424, Completing the Tax Return Where Registration of a Charity is Revoked</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2046.html">Form T2046, Tax Return Where Registration of a Charity is Revoked</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1,&nbsp;ss. 149.1(2) to (4.1), 168(1) to (4), 172(3), (3.1), 188(1) and (1.1)</li> 
  <li>Charities Registration (Security Information) Act, S.C. 2001, c. 41, ss. 5(1) and 7(1)</li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/ineligible-individuals.html">Ineligible individuals, CG-024</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/ineligible-individuals.html">Ineligible individuals, CG-024</a></li> 
 </ul>   
     
 
