--- a/policies-guidance/summary-policy-r24-revocation.html
+++ b/policies-guidance/summary-policy-r24-revocation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r24-revocation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r24-revocation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r24-revocation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r24-revocation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r24-revocation.html"/>
 	
@@ -315,9 +315,9 @@ Revocation</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-e09-eligible-donee.html">Summary policy CSP-E09, Eligible donee</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-w03-winding-period.html">Summary policy CSP-W03, Winding-up period</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-e09-eligible-donee.html">Summary policy CSP-E09, Eligible donee</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r12-revocation.html">Summary policy CSP-R12, Revocation</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-w03-winding-period.html">Summary policy CSP-W03, Winding-up period</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/rc4424.html">Guide RC4424, Completing the Tax Return Where Registration of a Charity is Revoked</a></li> 
  <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2046.html">Form T2046, Tax Return Where Registration of a Charity is Revoked</a></li> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, ss. 188(1), (1.1) and 189(6.2)</li> 
