--- a/policies-guidance/summary-policy-r25-revocation.html
+++ b/policies-guidance/summary-policy-r25-revocation.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r25-revocation.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r25-revocation.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r25-revocation.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r25-revocation.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-r25-revocation.html"/>
 	
@@ -316,7 +316,7 @@ Revocation</h1>
         <h2 class="font-large">References</h2>
  <ul> 
  <li>Income Tax Act, R.S.C. 1985 (5<sup>th</sup> supp.) c. 1, para. 168(1)(f)</li> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/ineligible-individuals.html">Ineligible individuals, CG-024</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/ineligible-individuals.html">Ineligible individuals, CG-024</a></li> 
 </ul>   
     
 
