--- a/policies-guidance/summary-policy-s02-self-help-groups.html
+++ b/policies-guidance/summary-policy-s02-self-help-groups.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s02-self-help-groups.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s02-self-help-groups.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s02-self-help-groups.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s02-self-help-groups.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/arc-organismes-bienfaisance-sommaire-politique-s02-groupes-entraide.html"/>
 	
@@ -315,7 +315,7 @@ Self-help groups</h1>
     
         <h2 class="font-large">References</h2>
  <ul> 
- <li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/policy-statement-016-distinction-between-self-help-members-groups.html">Policy statement CPS-016, Distinction between self-help and members' groups</a></li> 
+ <li><a href="https://cra-design.github.io/charities/policies-guidance/policy-statement-016-distinction-between-self-help-members-groups.html">Policy statement CPS-016, Distinction between self-help and members' groups</a></li> 
 </ul>   
     
 
