--- a/policies-guidance/summary-policy-s05-social-activities.html
+++ b/policies-guidance/summary-policy-s05-social-activities.html
@@ -12,8 +12,8 @@
 
 
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
-	<link rel="canonical" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s05-social-activities.html"/>
-    <link rel="alternate" hreflang="en" href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-s05-social-activities.html"/>
+	<link rel="canonical" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s05-social-activities.html"/>
+    <link rel="alternate" hreflang="en" href="https://cra-design.github.io/charities/policies-guidance/summary-policy-s05-social-activities.html"/>
 	
         <link rel="alternate" hreflang="fr" href="https://www.canada.ca/fr/agence-revenu/services/organismes-bienfaisance-dons/organismes-bienfaisance/politiques-lignes-directrices/sommaire-politique-s05-activites-sociales.html"/>
 	
@@ -315,8 +315,8 @@ Social activities</h1>
     
         <h2 class="font-large">References</h2>
 <ul>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/charitable-purposes-activities-that-benefit-youth-guidance.html">Guidance CG-020, Charitable purposes and activities that benefit youth</a></li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/charities-giving/charities/policies-guidance/summary-policy-r13-resources.html">Summary policy CSP-R13, Resources</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/charitable-purposes-activities-that-benefit-youth-guidance.html">Guidance CG-020, Charitable purposes and activities that benefit youth</a></li>
+<li><a href="https://cra-design.github.io/charities/policies-guidance/summary-policy-r13-resources.html">Summary policy CSP-R13, Resources</a></li>
 <li><a href="http://decisions.fca-caf.gc.ca/en/2001/2001fca171/2001fca171.html">Maisonnée de Hauterive Inc. v. Canada (Minister of National Revenue) (2001 FCA 171), 2001-05-29</a></li>
 </ul>
 
